@@ -250,6 +250,22 @@ hyphenated words; only then will long words be broken if necessary, unless
       was to always allow breaking hyphenated words.
 
 
+   .. attribute:: max_lines
+
+      (default: ``None``) If not ``None``, then the text be will truncated to
+      *max_lines* lines.
+
+      .. versionadded:: 3.4
+
+
+   .. attribute:: placeholder
+
+      (default: ``' [...]'``) String that will be appended to the last line of
+      text if it will be truncated.
+
+      .. versionadded:: 3.4
+
+
    :class:`TextWrapper` also provides some public methods, analogous to the
    module-level convenience functions:
 
@@ -266,15 +282,3 @@ hyphenated words; only then will long words be broken if necessary, unless
 
       Wraps the single paragraph in *text*, and returns a single string
       containing the wrapped paragraph.
-
-
-   .. function:: shorten(text, *, placeholder=" [...]")
-
-      Collapse and truncate the given text to fit in :attr:`width`
-      characters.
-
-      The text first has its whitespace collapsed.  If it then fits in
-      :attr:`width`, it is returned as-is.  Otherwise, as many words
-      as possible are joined and then the *placeholder* is appended.
-
-      .. versionadded:: 3.4
